# kria-dfx-apps

./: CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: collect.cmake  options.cmake
lib/: CMakeLists.txt  siha.c  siha.h
notebook/: AES-FFT.ipynb  AES-FIR-FFT.ipynb  AES128.ipynb  AES192.ipynb  AES_On_HW_vs_SW.ipynb  dfx-ml-inference.ipynb  dfx-ml-inference_usb.ipynb  k26-dfx-ml-inference.ipynb  pad.py  siha.py
notebook/images/: Thumbs.db
notebook/lib/: siha.c  siha.h
src/AES128/: CMakeLists.txt  main.c
src/AES192/: CMakeLists.txt  main.c
src/FFT/: CMakeLists.txt  main.c
src/FIR/: CMakeLists.txt  main.c
src/dfx-ml-inference/: CMakeLists.txt  README.md
src/dfx-ml-inference/config/facedetect/: aiinference.json  drawresult.json  preprocess.json
src/dfx-ml-inference/config/refinedet/: aiinference.json  drawresult.json  preprocess.json
src/dfx-ml-inference/config/ssd/: aiinference.json  drawresult.json  preprocess.json
src/dfx-ml-inference/lib/: vvas_airender.cpp  vvas_airender.hpp  vvas_xpp_pipeline.c
